# waldur-mastermind

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  docker_build.sh  docker_push.sh  pyproject.toml  pytest.ini  pytest.ini.example  schema.json  setup.py  test_waldur_client.py  test_waldur_os_add_instance.py  tox.ini  waldur_batch_allocation.py  waldur_batch_offering.py  waldur_client.py  waldur_marketplace.py  waldur_marketplace_os_get_instance.py  waldur_marketplace_os_instance.py  waldur_marketplace_os_volume.py  waldur_os_add_instance.py  waldur_os_floating_ip.py  waldur_os_get_instance.py  waldur_os_instance.py  waldur_os_instance_volume.py  waldur_os_security_group.py  waldur_os_security_group_gather_facts.py  (+2 more)
docker/: Dockerfile  Makefile  README.md  docker-compose.yml  run-tests.sh
docker-dev/: README.md  docker-compose.yml
docker-dev/api/: Dockerfile  entrypoint.sh  settings.py.example
docker-test/: docker-compose.yml  run-tests.sh
docker-test/api/: Dockerfile  entrypoint.sh  requirements.txt  waldur-test
docker-test/db/: Dockerfile  update-config.sh
docker/api/: Dockerfile  requirements.txt  waldur-test
docker/db/: Dockerfile  init.sql
docker/rootfs/: app-entrypoint.sh
docs/: Makefile  conf.py  events.md  how-to-add-new-language.md  how-to-write-docs.md  how-to-write-serializers.md  how-to-write-tests.md  how-to-write-views.md  index.md  index.rst  install-from-src.md  installation.rst  logging.md  managed-entities.md  models.md  permissions.md  quotas.md  resource-actions.md  settings-policy.md  templates.md  workflow.md
docs/developer/: django-axes.md  django-axes.rst  documentation.rst  how-to-add-new-language.rst  how-to-create-invoice-items.rst  how-to-install-jira.rst  how-to-write-docs.rst  how-to-write-imports.rst  how-to-write-serializers.md  how-to-write-serializers.rst  how-to-write-tests.rst  how-to-write-views.rst  i18n.md  i18n.rst  index.md  index.rst  logging.rst  managed-entities.rst  permissions.rst  quotas.md  quotas.rst  settings-policy.rst  tasks-and-executors.md  tasks-and-executors.rst  workflow.md  workflow.rst
docs/guide/: api.md  api.rst  background.md  background.rst  bootstrap-centos7.sh  bootstrap.sh  index.md  index.rst  install-from-rpm.rst  install-from-src.md  install-from-src.rst  jira_setup.rst  permissions.md  permissions.rst  resource-actions.rst  setup-backend-atlassian.rst  structure.md  structure.rst
docs/images/: testdata-alice.dot
docs/plugins/: cost-planning.rst  cost-tracking.rst  index.md  index.rst  invoices.md  invoices.rst  jira.md  jira.rst  plugins.md  plugins.rst  statistics.rst  valimo.md  valimo.rst  zabbix.rst
gitlab-ci-test/: Dockerfile  waldur-test
packaging/: ansible-waldur-module.spec  nodeconductor-assembly-waldur.spec  python-waldur-client.spec  settings.py  waldur-mastermind.spec  waldur_client.spec
src/nodeconductor_assembly_waldur/: __init__.py
src/waldur_auth_bcc/: __init__.py  apps.py  client.py  extension.py  serializers.py  urls.py  views.py
src/waldur_auth_openid/: __init__.py  apps.py  auth.py  extension.py  log.py  urls.py  views.py
src/waldur_auth_saml2/: __init__.py  admin.py  apps.py  auth.py  extension.py  filters.py  handlers.py  log.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/waldur_auth_social/: __init__.py  apps.py  exceptions.py  extension.py  handlers.py  log.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/waldur_auth_valimo/: __init__.py  admin.py  apps.py  client.py  executors.py  extension.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/waldur_aws/: __init__.py  admin.py  apps.py  backend.py  cost_tracking.py  executors.py  extension.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/waldur_azure/: __init__.py  admin.py  apps.py  backend.py  client.py  cost_tracking.py  driver.py  executors.py  extension.py  filters.py  handlers.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/waldur_core/: __init__.py
src/waldur_cost_planning/: __init__.py  admin.py  apps.py  extension.py  filters.py  models.py  optimizers.py  register.py  serializers.py  urls.py  views.py
src/waldur_digitalocean/: __init__.py  admin.py  apps.py  backend.py  cost_tracking.py  executors.py  extension.py  filters.py  handlers.py  log.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/waldur_firecrest/: __init__.py  apps.py  client.py  extension.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/waldur_freeipa/: __init__.py  admin.py  apps.py  backend.py  extension.py  filters.py  handlers.py  log.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/waldur_geo_ip/: __init__.py  apps.py  exceptions.py  extension.py  handlers.py  mixins.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/waldur_hpc/: __init__.py  apps.py  extension.py  handlers.py
src/waldur_jira/: __init__.py  admin.py  apps.py  backend.py  executors.py  extension.py  filters.py  handlers.py  jira_fix.py  log.py  models.py  serializers.py  urls.py  views.py
src/waldur_keycloak/: __init__.py  apps.py  backend.py  client.py  extension.py  models.py  tasks.py
src/waldur_keycloak_rancher/: __init__.py  apps.py  extension.py  tasks.py
src/waldur_lexis/: apps.py  backend.py  exceptions.py  executors.py  extension.py  filters.py  handlers.py  models.py  serializers.py  structures.py  urls.py  views.py
src/waldur_mastermind/: __init__.py
src/waldur_openstack/: __init__.py  admin.py  apps.py  backend.py  exceptions.py  executors.py  extension.py  filters.py  handlers.py  log.py  models.py  quotas.py  urls.py  (+6 more)
tests/: test_waldur_batch_allocation.py  test_waldur_batch_offering.py  test_waldur_client.py  test_waldur_marketplace.py  test_waldur_os_instance.py  test_waldur_os_instance_volume.py  test_waldur_os_security_group.py
(+3087 files in other folders)
