[tool.black]
line-length = 88
skip-string-normalization = true

[tool.poetry]
name = "waldur-mastermind"
version = "0.0.0"
description = "Waldur MasterMind is a hybrid cloud orchestrator."
authors = ["OpenNode Team <info@opennodecloud.com>"]
license = "MIT"
homepage = "https://waldur.com"
documentation = "https://docs.waldur.com"
classifiers=[
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
apache-libcloud = "2.2.1"
azure-mgmt-compute = "20.0.0"
azure-mgmt-network = "19.0.0"
azure-mgmt-nspkg = "3.0.2"
azure-mgmt-rdbms = "8.0.0"
azure-mgmt-resource = "18.0.0"
azure-mgmt-sql = "2.0.0"
azure-mgmt-storage = "18.0.0"
msrestazure = "0.6.4"
azure-identity= "1.6.0"
celery = "^5.0.5"
croniter = "1.0.15"
defusedxml = "0.6.0"
django-admin-tools = "0.9.2"
django-auth-ldap = "3.0.0"
django-filter = "2.4.0"
django-fluent-dashboard = "1.0.1"
django-fsm = "2.8.0"
django-jsoneditor = "0.0.12"
django-model-utils = "4.2.0"
django-redis-cache = "3.0.0"
django-rest-swagger = "2.1.2"
django-reversion = "4.0.1"
djangorestframework = "3.12.2"
djangosaml2 = "1.0.5"
docker = "4.1.0"
hiredis = "0.2.0"
iptools = "0.6.1"
jira = "2.0.0"
lxml = "^4.6.5"
paypalrestsdk = "1.13.1"
pbr = "4.0.4"
pdfkit = "0.6.1"
Pillow = "^9.0.0"
prettytable = "0.7.2"
psycopg2-binary = "2.8.4"
pycountry = "1.20"
PyJWT = "2.3.0"
pyOpenSSL = "18.0.0"
pysaml2 = "6.5.1"
python-cinderclient = "3.6.0"
python-dateutil = "2.7.3"
python-digitalocean = "1.16.0"
python-glanceclient = "2.11.1"
python-keystoneclient = "3.16.0"
python-ldap = "3.4.0"
python-neutronclient = "6.12.0"
python-novaclient = "10.3.0"
pyvat = "1.3.15"
pyvmomi = "6.7.1"
PyYAML = "^5.1.2"
redis = "3.4.1"
requests = "^2.26.0"
sentry-sdk = "^1.4.1"
sqlparse = "0.2.4"
python-freeipa = "0.2.5"
django-modeltranslation = "^0.15"
django-axes = "^5.4.3"
geopy = "^2.0.0"
google-api-python-client = "^1.12.5"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"
django-health-check = "^3.16.2"
bleach = "^3.3.0"
django-dbtemplates = {git = "https://github.com/waldur/django-dbtemplates", rev="master"}
django-upload-validator = {git = "https://github.com/waldur/django-upload-validator", rev="master"}
pydantic = "^1.8.2"
SQLAlchemy = "1.3.0"
cryptography = "3.4.7"
django-binary-database-files = {git = "https://github.com/waldur/django-binary-database-files.git", rev = "fix/load-command-for-db-files"}
django-import-export = {git = "https://github.com/waldur/django-import-export", rev = "main"}
python-waldur-client = {git = "https://github.com/waldur/python-waldur-client", rev = "master"}
kubernetes = ">=21.7.0"
Django = "3.2.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "2.5.1"
pytest-django = "^4.4.0"
responses = "0.9.0"
ddt = "1.0.3"
factory-boy = "2.4.1"
freezegun = "1.1.0"
mock-django = "0.6.9"
django-cors-headers = "^3.2.1"
pre-commit = "^2.13.0"
pytest-split-tests = "^1.0.9"

[tool.poetry.plugins.console_scripts]
waldur = "waldur_core.server.manage:main"

[tool.poetry.plugins.waldur_extensions]
waldur_analytics = "waldur_mastermind.analytics.extension:AnalyticsExtension"
waldur_auth_bcc = "waldur_auth_bcc.extension:AuthBCCExtension"
waldur_auth_saml2 = "waldur_auth_saml2.extension:SAML2Extension"
waldur_auth_social = "waldur_auth_social.extension:AuthSocialExtension"
waldur_auth_valimo = "waldur_auth_valimo.extension:AuthValimoExtension"
waldur_aws = "waldur_aws.extension:AWSExtension"
waldur_azure = "waldur_azure.extension:AzureExtension"
waldur_billing = "waldur_mastermind.billing.extension:BillingExtension"
waldur_booking = "waldur_mastermind.booking.extension:BookingExtension"
waldur_digitalocean = "waldur_digitalocean.extension:DigitalOceanExtension"
waldur_freeipa = "waldur_freeipa.extension:FreeIPAExtension"
waldur_geo_ip = "waldur_geo_ip.extension:GeoIPExtension"
waldur_invoices = "waldur_mastermind.invoices.extension:InvoicesExtension"
waldur_jira = "waldur_jira.extension:JiraExtension"
waldur_marketplace = "waldur_mastermind.marketplace.extension:MarketplaceExtension"
waldur_marketplace_azure = "waldur_mastermind.marketplace_azure.extension:MarketplaceAzureExtension"
waldur_marketplace_checklist = "waldur_mastermind.marketplace_checklist.extension:MarketplaceChecklistExtension"
waldur_marketplace_openstack = "waldur_mastermind.marketplace_openstack.extension:MarketplaceOpenStackExtension"
waldur_marketplace_rancher = "waldur_mastermind.marketplace_rancher.extension:MarketplaceRancherExtension"
waldur_marketplace_script = "waldur_mastermind.marketplace_script.extension:MarketplaceScriptExtension"
waldur_marketplace_slurm = "waldur_mastermind.marketplace_slurm.extension:MarketplaceSlurmExtension"
waldur_marketplace_support = "waldur_mastermind.marketplace_support.extension:MarketplaceSupportExtension"
waldur_marketplace_vmware = "waldur_mastermind.marketplace_vmware.extension:MarketplaceVMwareExtension"
waldur_marketplace_remote = "waldur_mastermind.marketplace_remote.extension:MarketplaceRemoteExtension"
waldur_marketplace_flows = "waldur_mastermind.marketplace_flows.extension:MarketplaceFlowsExtension"
waldur_openstack = "waldur_openstack.openstack.extension:OpenStackExtension"
waldur_openstack_tenant = "waldur_openstack.openstack_tenant.extension:OpenStackTenantExtension"
waldur_notifications = "waldur_mastermind.notifications.extension:NotificationsExtension"
waldur_paypal = "waldur_paypal.extension:PayPalExtension"
waldur_rancher = "waldur_rancher.extension:RancherExtension"
waldur_slurm = "waldur_slurm.extension:SlurmExtension"
waldur_support = "waldur_mastermind.support.extension:SupportExtension"
waldur_vmware = "waldur_vmware.extension:VMwareExtension"
waldur_pid = "waldur_pid.extension:PIDExtension"
waldur_google = "waldur_mastermind.google.extension:GoogleExtension"
waldur_hpc = "waldur_hpc.extension:HPCExtension"
waldur_keycloak = "waldur_keycloak.extension:KeycloakExtension"
waldur_firecrest = "waldur_firecrest.extension:FirecrestExtension"
waldur_keycloak_rancher = "waldur_keycloak_rancher.extension:KeycloakRancherExtension"

[build-system]
requires = ["poetry=1.1.11"]
build-backend = "poetry.masonry.api"
